# tools

./: README.md  cms-import.py  cms-load-test-jmeter.jmx  cms-tools.py  create_participants.sh  file-copy.py  hosts.yaml.sample  oci_import.py
cms-tools/: README.md  cms-tools.py  cms.conf.sample  conf.sample.yaml  hosts.yaml.sample  pyproject.toml
cms-tools/cms_tools/: conf.sample.yaml  main.py
credentials/: .gitignore  README.md  credentials.py  main.tex  pyproject.toml  users.sample.csv
credentials/credentials/: __init__.py  credentials.tcss  latexgen.py  main.py  pdf.py  types.py  typstgen.py  vim.py
oci-server-tools/: README.md  conf.yaml  pyproject.toml
oci-server-tools/src/cms_tools/: __init__.py  cms.sample.toml  conf.sample.yaml  main.py
oci-server-tools/src/csv_paste/: __init__.py  main.py
