[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64"]

[project]
dependencies = [
    "ruamel.yaml",
    "prettytable",
    "tomlkit>=0.13.3",
    "pydantic>=2.12.4",
]
name = "oci-server-tools"
# version in Ubuntu 24.04
requires-python = ">= 3.12"
version = "0.1.0"

[project.optional-dependencies]
dev = ["mypy==1.16.1", "pyright==1.1.402", "ruff==0.12.1"]

[project.scripts]
cms-tools = "cms_tools:main"
csv-paste = "csv_paste:main"

[tool.setuptools.package-data]
cms_tools = ["cms.sample.toml", "conf.sample.yaml", "flags/*.png", "logo.png"]

[tool.pyright]
pythonPlatform = "All"
pythonVersion = "3.12"
typeCheckingMode = "strict"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
ignore = [
    "ANN401",
    "D100",
    "D101",
    "D102",
    "D103",
    "D105",
    "D106",
    "D107",
    "D203",
    "D213",
    "E501",
    "E731",
    "PYI034",
]
select = [
    "ANN",
    "B",
    "C4",
    "COM",
    "D",
    "E",
    "F",
    "FA",
    "FBT",
    "FLY",
    "ISC",
    "N",
    "PERF",
    "PTH",
    "PYI",
    "RUF",
    "SIM",
    "UP",
    "W",
]
